# Derek-UI

./: .gitignore  README.md  config.yaml  pyproject.toml
.devcontainer/: devcontainer.json
ai_chat_streamlit/chat/: model.py  session.py  streamlit_bedrock_example.py  streamlit_chat.py  streamlit_chatgpt_example.py
